--- a/async_t_internal/Cargo.toml
+++ b/async_t_internal/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "impl-trait"
-version = "0.1.1"
+name = "async_t_internal"
+version = "0.1.0"
 edition = "2021"
+description = ""
+license = "MIT"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
