--- a/async_t/Cargo.toml
+++ b/async_t/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "async_t"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
-description = "zero-cost compile-time async-traits"
+description = "zero-cost async-traits"
 license = "MIT"
+repository = "https://github.com/znx3p0/async_t"
+keywords = [ "async-trait", "async" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
