--- a/async_t_internal/Cargo.toml
+++ b/async_t_internal/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "async_t_internal"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 description = "contains async_t macro"
 license = "MIT"
-
+repository = "https://github.com/znx3p0/async_t"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
