--- a/async_t/Cargo.toml
+++ b/async_t/Cargo.toml
@@ -10,7 +10,7 @@ keywords = [ "async-trait", "async" ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# async_t_internal = { path = "../async_t_internal" }
-async_t_internal = "0.4.0"
+async_t_internal = { path = "../async_t_internal" }
+# async_t_internal = "0.4.0"
 async-trait = "0.1"
 rustversion = "1"
