--- a/async_t/Cargo.toml
+++ b/async_t/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "async_t"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 description = "zero-cost async-traits"
 license = "MIT"
@@ -10,7 +10,7 @@ keywords = [ "async-trait", "async" ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async_t_internal = { path = "../async_t_internal" }
+async_t_internal = { path = "../async_t_internal", version = "0.5.0" }
 # async_t_internal = "0.4.0"
 async-trait = "0.1"
 rustversion = "1"
